Fix responsive splash page on mobile device

--- a/myapp/static/style.css
+++ b/myapp/static/style.css
@@ -57,6 +57,11 @@ p {
 .home__buttons {
   margin-top: 40px;
 }
+@media screen and (max-width: 992px) {
+  .home__img_container {
+    display: none;
+  }
+}
 /*========== Pomodoro Timer Section ==========*/
 .pomodoroTimer_container {
   height: 300px;
